Fix projects image size on mobile and tablet.

--- a/src/assets/css/projects.scss
+++ b/src/assets/css/projects.scss
@@ -53,15 +53,15 @@ section.projects {
 @media all and (max-width: 649px) {
   // PROJECTS
   section.projects img {
-    width: 44% !important;
-    height: auto;
+    width: 308px !important;
+    height: 205px !important;
   }
 }
 
 @media all and (min-width: 650px) and (max-width: 959px) {
   // PROJECTS
   section.projects img {
-    width: 76% !important;
-    height: auto;
+    width: 532px !important;
+    height: 350px !important;
   }
 }
